b=200417 backspace, enter keys have no visible impact r=jfrancis sr=sfraser a=sspitzer